--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: ["main"]
     tags: ["v*.*.*"]
+    paths-ignore:
+      - 'README.md'
+      - '.github/workflows/docker-publish.yml'
+      - '.gitignore'
 
 env:
   REGISTRY: ghcr.io
